--- a/motorrad.html
+++ b/motorrad.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang='de'>
+<html lang="de">
 <head>
-  <meta CHARSET='UTF-8'>
+  <meta charset="UTF-8">
   <title>Motorräder - beste Modelle und Marken</title>
 </head>
 <body>
 <h1>Top Motorrad Modelle und Marken</h1>
 <h2>Yamaha</h2>
 <p>Yamaha ist ein japanisches Unternehmen, das seit vielen Jahren hochwertige Motorräder herstellt. Zu ihren
-  bekanntesten Modellen gehören die Yamaha YZF-R1, die Yamaha MT-07 und die Yamaha Tenere 700.</P>
+  bekanntesten Modellen gehören die Yamaha YZF-R1, die Yamaha MT-07 und die Yamaha Tenere 700.</p>
 <h2>Honda</h2>
 <p>Honda ist ebenfalls ein japanisches Unternehmen und stellt seit langem Motorräder her. Einige der bekanntesten
   Modelle sind die Honda CBR1000RR, die Honda CB650R und die Honda Africa Twin.</P>
