--- a/motorrad.html
+++ b/motorrad.html
@@ -11,12 +11,12 @@
   bekanntesten Modellen gehören die Yamaha YZF-R1, die Yamaha MT-07 und die Yamaha Tenere 700.</p>
 <h2>Honda</h2>
 <p>Honda ist ebenfalls ein japanisches Unternehmen und stellt seit langem Motorräder her. Einige der bekanntesten
-  Modelle sind die Honda CBR1000RR, die Honda CB650R und die Honda Africa Twin.</P>
+  Modelle sind die Honda CBR1000RR, die Honda CB650R und die Honda Africa Twin.</p>
 <h2>BMW</h2>
 <p>BMW ist ein deutsches Unternehmen, das sich auf leistungsstarke und luxuriöse Motorräder spezialisiert hat. Ihre
-  bekanntesten Modelle sind die BMW R1250GS, die BMW S1000RR und die BMW R18.</P>
+  bekanntesten Modelle sind die BMW R1250GS, die BMW S1000RR und die BMW R18.</p>
 <h3>Motorradtypen</h3>
-<uL>
+<ul>
   <li>Sportmotorräder</li>
   <li>Touringmotorräder</li>
   <li>Naked Bikes</li>
